--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,8 @@ Cargo.lock
 target/
 **/*.rs.bk
 Cargo.lock
+
+data/t10k-images-idx3-ubyte
+data/t10k-labels-idx1-ubyte
+data/train-images-idx3-ubyte
+data/train-labels-idx1-ubyte
